2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h, gnome-selectorP.h: Moved the async stuff to
	gnome-async-context.[ch].

	* gnome-async-context.[ch]: New files.

	* gnome-directory-filter.[ch]: New files.

2001-05-23  Martin Baulig  <baulig@suse.de>

	* gnome-selector-factory.c (create_selector_handler): Read values
	from the PropertyBag and set the GObject properties.

Mon May 21 23:12:04 2001  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: wipe all the standard incomformat stuff, clean
	  up a little bit and start on supporting the standard.  Currently
	  compiles but doesn't all work, that is launching doesn't work.
	  Also wipe all KDE vs. GNOME stuff, now the entry is converted to
	  standard upon load, making life easier on the rest of the functions

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector-factory.c: Create a BonoboItemHandler so that
	you can create a new GnomeSelector entirely with monikers.

	* gnome-selector-dialog.[ch]: New files.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c (GNOME_TYPE_TRISTATE): New enum type.
	(PROP_WANT_BROWSE_BUTTON): Use the new tristate enum.
	(PROP_WANT_CLEAR_BUTTON, PROP_WANT_DEFAULT_BUTTON): Likewise.
	(PROP_WANT_ENTRY_WIDGET): New tristate property.
	(PROP_WANT_SELECTOR_WIDGET): New tristate property.
	(PROP_WANT_BROWSE_DIALOG): New tristate property.
	(PROP_WANT_DEFAULT_BEHAVIOUR): Removed.
	(PROP_USE_DEFAULT_ENTRY_WIDGET): Removed.
	(PROP_USE_DEFAULT_SELECTOR_WIDGET): Removed.
	(PROP_USE_DEFAULT_BROWSE_DIALOG): Removed.

Mon May 21 00:43:48 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-entry.[ch]: to be consistent with everything else g*
	  return the item from the _ref function when we do that.  Also
	  update the docs for this of course.

Sun May 20 22:46:20 2001  George Lebl <jirka@5z.com>

	* gnome-config.c: fix get_translated_string wrt defaults, the old
	  implementation just didn't work AT ALL if you passed in a default,