@@ -1,5 +1,14 @@
 2001-05-25  Martin Baulig  <baulig@suse.de>
 
+	* gnome-selector.[ch]: Merged `check_filename' and `check_directory'
+	into `check_uri' and `add_file' and `add_directory' into `add_uri'.
+
+2001-05-25  Martin Baulig  <baulig@suse.de>
+
+	* gnome-async-context.h (GNOME_ASYNC_TYPE_*): Removed.
+
+2001-05-25  Martin Baulig  <baulig@suse.de>
+
 	* gnome-selector.h, gnome-selectorP.h: Moved the async stuff to
 	gnome-async-context.[ch].
 
